--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "author": "theblackmamba08",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "mongoose": "^8.18.0",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
