--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "backend-phonebook",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build:ui": "rm -rf dist && cd ../frontend-phonebook/ && npm run build && cp -r dist ../backend-phonebook",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/theblackmamba08/backend-phonebook.git"
-  },
-  "author": "theblackmamba08",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.0",
-    "morgan": "^1.10.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+    "name": "backend-phonebook",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js",
+        "build:ui": "rm -rf dist && cd ../frontend-phonebook/ && npm run build && cp -r dist ../backend-phonebook",
+        "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/theblackmamba08/backend-phonebook.git"
+    },
+    "author": "theblackmamba08",
+    "license": "MIT",
+    "dependencies": {
+        "dotenv": "^17.2.2",
+        "express": "^5.1.0",
+        "mongoose": "^8.18.0",
+        "morgan": "^1.10.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.35.0",
+        "@stylistic/eslint-plugin": "^5.3.1",
+        "eslint": "^9.35.0",
+        "globals": "^16.3.0",
+        "nodemon": "^3.1.10"
+    }
 }
